lightbox structure and css

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -756,6 +756,12 @@
         </div>
       </div>
     </section>
+    <!--Lightbox section-->
+    <section class="lightbox">
+      <div class="lightbox-body">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde dicta, necessitatibus veniam repellendus vitae voluptatum, quasi ipsa perferendis libero dolores magni architecto veritatis a soluta rerum ab sapiente commodi deserunt.
+      </div>
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
