--- a/caferio/index.html
+++ b/caferio/index.html
@@ -757,9 +757,8 @@
       </div>
     </section>
     <!--Lightbox section-->
-    <section class="lightbox">
+    <section class="lightbox scale-0" id="lightbox">
       <div class="lightbox-body">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde dicta, necessitatibus veniam repellendus vitae voluptatum, quasi ipsa perferendis libero dolores magni architecto veritatis a soluta rerum ab sapiente commodi deserunt.
       </div>
     </section>
     <script src="js/index.js" defer></script>
