add background image

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -761,6 +761,10 @@
       <div class="lightbox-body">
       </div>
     </section>
+    <!--download section-->
+    <section class="download">
+      
+    </section>
     <script src="js/index.js" defer></script>
   </body>
 </html>
