add texts and complete the download section

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -757,13 +757,23 @@
       </div>
     </section>
     <!--Lightbox section-->
-    <section class="lightbox scale-0" id="lightbox">
+    <section class="scale-0 lightbox" id="lightbox">
       <div class="lightbox-body">
       </div>
     </section>
     <!--download section-->
     <section class="download">
-      
+      <div class="container">
+        <div class="row h-[450px] items-center">
+          <div class="download-col">
+            <h1 class="heading">download app</h1>
+            <h1 class="download-heading">Get our Mobile Apps from your mobile Playstore</h1>
+            <p class="download-paragraph">Easily Order food through your Mobile App. Get your order at your Door-step.</p>
+            <div class="mt-5 flex space-x-2"><img src="./images/appDownload/apple.png" alt="download app">
+              <img src="./images/appDownload/google.png" alt="download app"></div>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="js/index.js" defer></script>
   </body>
