footer logo and social links

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -775,6 +775,26 @@
         </div>
       </div>
     </section>
+    <!--footer section-->
+    <footer class="footer">
+      <div class="container">
+        <div class="row -mx-4">
+          <!--footer logo/socials-->
+          <div class="footer-logo-col">
+            <a href="#" class="footer-logo-link">
+              <img src="images/logo.png" alt="logo" class="image-cover">
+            </a>
+            <p class="footer-copyright">Copyright &copy;<span class="currentYear"></span> by Caferio Inc. All rights reserved</p>
+            <div class="footer-socials">
+              <a href="#"><img src="images/socials/icon-facebook.svg" alt="facebook" class="ficon"/></a>
+              <a href="#"><img src="images/socials/icon-instagram.svg" alt="instagram" class="ficon"/></a>
+              <a href="#"><img src="images/socials/icon-pinterest.svg" alt="pinterest" class="ficon"/></a>
+              <a href="#"><img src="images/socials/icon-twitter.svg" alt="twitter" class="ficon"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="js/index.js" defer></script>
   </body>
 </html>
