create footer link

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -792,6 +792,16 @@
               <a href="#"><img src="images/socials/icon-twitter.svg" alt="twitter" class="ficon"/></a>
             </div>
           </div>
+          <!--Footer menu1-->
+          <div class="footer-menu-col">
+            <h1 class="footer-heading">services</h1>
+            <ul class="mt-3">
+              <li><a href="#" class="footer-ul-li">online order</a></li>
+              <li><a href="#" class="footer-ul-li">suport chat</a></li>
+              <li><a href="#" class="footer-ul-li">free reservation</a></li>
+              <li><a href="#" class="footer-ul-li">24/7 available</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
