create more footer links

--- a/caferio/index.html
+++ b/caferio/index.html
@@ -762,7 +762,7 @@
       </div>
     </section>
     <!--download section-->
-    <section class="download">
+    <section class="download" id="download">
       <div class="container">
         <div class="row h-[450px] items-center">
           <div class="download-col">
@@ -802,6 +802,37 @@
               <li><a href="#" class="footer-ul-li">24/7 available</a></li>
             </ul>
           </div>
+          <!--Footer menu2-->
+          <div class="footer-menu-col">
+            <h1 class="footer-heading">quick links</h1>
+            <ul class="mt-3">
+              <li><a href="#categories" class="footer-ul-li">categories</a></li>
+              <li><a href="#popular" class="footer-ul-li">popular dishes</a></li>
+              <li><a href="#pricing" class="footer-ul-li">pricing</a></li>
+              <li><a href="#testimonials" class="footer-ul-li">testimonials</a></li>
+              <li><a href="#download" class="footer-ul-li">download app</a></li>
+            </ul>
+          </div>
+          <!--Footer menu3-->
+          <div class="footer-menu-col">
+            <h1 class="footer-heading">about</h1>
+            <ul class="mt-3">
+              <li><a href="#" class="footer-ul-li">our story</a></li>
+              <li><a href="#" class="footer-ul-li">benefits</a></li>
+              <li><a href="#" class="footer-ul-li">careers</a></li>
+              <li><a href="#" class="footer-ul-li">blogs</a></li>
+            </ul>
+          </div>
+          <!--Footer menu4-->
+          <div class="footer-menu-col">
+            <h1 class="footer-heading">help</h1>
+            <ul class="mt-3">
+              <li><a href="#" class="footer-ul-li">our branches</a></li>
+              <li><a href="#" class="footer-ul-li">contact us</a></li>
+              <li><a href="#" class="footer-ul-li">faq</a></li>
+            </ul>
+          </div>
+          <!--Footer menu4 Ends-->
         </div>
       </div>
     </footer>
