--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -9,10 +9,45 @@
   </head>
   <body>
     <nav class="bg-white shadow-lg">
-      <div>
-        <div>
-          <div>
-            <a href="#"><img src="" alt="" /><span>KatProperty</span></a>
+      <!--main nav contianer-->
+      <div class="px-3 max-w-6xl mx-auto">
+        <!--nav items container-->
+        <div class="flex justify-between">
+          <!--rhs nav items-->
+          <div class="flex">
+            <a href="#" class="flex items-center space-x-3 py-4 px-4">
+              <img
+                src="images/home_icon.png"
+                alt="house icon"
+                class="h-8 w-8"
+              />
+              <span class="font-semibold text-gray-500 text-lg"
+                >Valley Property</span
+              >
+            </a>
+          </div>
+          <!--rhs nav items-->
+          <div class="hidden md:flex items-center space-x-2">
+            <a
+              href="#"
+              class="py-7 px-2 text-green-500 font-semibold border-b-4 border-green-500"
+              >Home</a
+            >
+            <a
+              href="#"
+              class="py-7 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+              >Services</a
+            >
+            <a
+              href="#"
+              class="py-7 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+              >About</a
+            >
+            <a
+              href="#"
+              class="py-7 px-2 text-gray-500 font-semibold hover:text-green-500 transition duration-300"
+              >Contact Us</a
+            >
           </div>
         </div>
       </div>
