create banner section

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -52,5 +52,40 @@
         </div>
       </div>
     </nav>
+    <!--Banner Section-->
+    <main class="mt-4 md:mt-10">
+      <div class="text-center md:text-left m-6 md:m-8">
+        <h1 class="tracking-tight font-extrabold text-5xl md:text-4xl p-2">
+          <span class="block">Premium Properties</span>
+          <span class="block text-green-500">Non-Premium Prices</span>
+        </h1>
+        <p class="text-gray-500 text-lg md:text-xl p-2">
+          At prime location in valley, only prime properties too. Voluptates
+          totam consequuntur nisi optio excepturi commodi aperiam quoiure ipsam
+          quibusdam, ab unde earum atque maiores nesciunt nihil,magni magnam!
+          Amet?
+        </p>
+        <!--buttons-->
+        <div
+          class="flex flex-col sm:flex-row sm:justify-center space-y-4 sm:space-y-0 sm:space-x-4 p-2"
+        >
+          <div>
+            <a
+              href="#"
+              class="bg-green-500 text-white px-8 py-3 flex justify-center rounded-lg"
+              >View properties</a
+            >
+          </div>
+          <div>
+            <a
+              href="#"
+              class="bg-green-100 text-green-500 px-8 py-3 flex justify-center rounded-lg"
+              >View location</a
+            >
+          </div>
+        </div>
+      </div>
+    </main>
+    <!--Banner Section Ends-->
   </body>
 </html>
