recent property banner section

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -87,5 +87,129 @@
       </div>
     </main>
     <!--Banner Section Ends-->
+    <!--Recent Property -->
+    <!--Recent Property heading-->
+    <div class="flex justify-center">
+      <h2 class="capitalize text-3xl text-gray-500">recent properties</h2>
+    </div>
+    <!--Recent Property Card Section-->
+    <div class="grid grid-cols-1 md:grid-cols-3 p-8 gap-5">
+      <!--card1-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/house7.jpeg" class="w-full max-h-min" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">green house</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$350,000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >5 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >2 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-500 rounded-full px-4 py-1 font-bold text-white mr-2 mb-2 capitalize"
+          >
+            view property
+          </button>
+        </div>
+      </div>
+      <!--card1 Ends-->
+      <!--card2-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/house5.jpeg" class="w-full max-h-min" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">Orchid villa</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$9,500,000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >25 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >10 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-500 rounded-full px-4 py-1 font-bold text-white mr-2 mb-2 capitalize"
+          >
+            view property
+          </button>
+        </div>
+      </div>
+      <!--card2 Ends-->
+      <!--card3-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/house6.jpeg" class="w-full max-h-min" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">Orchid House</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block text-green-300 font-bold text-sm px-3 py-1 mr-2 mb-2"
+            >$960,000</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-2">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >9 Beds</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+            >3 Baths</span
+          >
+        </div>
+        <div class="px-6 pt-4 pb-10">
+          <button
+            class="inline-block bg-green-500 rounded-full px-4 py-1 font-bold text-white mr-2 mb-2 capitalize"
+          >
+            view property
+          </button>
+        </div>
+      </div>
+      <!--card3 Ends-->
+    </div>
+    <!--Recent Property Card Section Ends-->
+    <!--Recent Property Ends-->
   </body>
 </html>
