fix cards image height to be same

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -96,7 +96,7 @@
     <div class="grid grid-cols-1 md:grid-cols-3 p-8 gap-5">
       <!--card1-->
       <div class="rounded-lg shadow-lg overflow-hidden">
-        <img src="images/house7.jpeg" class="w-full max-h-min" />
+        <img src="images/house7.jpeg" class="w-full h-1/2" />
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2 capitalize">green house</div>
           <p class="text-gray-600">
@@ -134,7 +134,7 @@
       <!--card1 Ends-->
       <!--card2-->
       <div class="rounded-lg shadow-lg overflow-hidden">
-        <img src="images/house5.jpeg" class="w-full max-h-min" />
+        <img src="images/house5.jpeg" class="w-full h-1/2" />
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2 capitalize">Orchid villa</div>
           <p class="text-gray-600">
@@ -172,7 +172,7 @@
       <!--card2 Ends-->
       <!--card3-->
       <div class="rounded-lg shadow-lg overflow-hidden">
-        <img src="images/house6.jpeg" class="w-full max-h-min" />
+        <img src="images/house6.jpeg" class="w-full h-1/2" />
         <div class="px-6 py-4">
           <div class="font-bold text-xl mb-2 capitalize">Orchid House</div>
           <p class="text-gray-600">
