--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -63,7 +63,10 @@
           At prime location in valley, only prime properties too. Voluptates
           totam consequuntur nisi optio excepturi commodi aperiam quoiure ipsam
           quibusdam, ab unde earum atque maiores nesciunt nihil,magni magnam!
-          Amet?
+          Amet? At prime location in valley, only prime properties too.<br />
+          Voluptates totam consequuntur nisi optio excepturi commodi aperiam
+          quoiure ipsam quibusdam, ab unde earum atque maiores nesciunt
+          nihil,magni magnam! Amet?
         </p>
         <!--buttons-->
         <div
@@ -211,5 +214,31 @@
     </div>
     <!--Recent Property Card Section Ends-->
     <!--Recent Property Ends-->
+    <!--hero section-->
+    <div
+      class="max-h-screen py-20"
+      style="
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+          ),
+          url('images/background.jpeg');
+      "
+    >
+      <div class="container mx-auto px-6 mt-40">
+        <h2 class="capitalize text-4xl font-bold text-white mb-2">
+          Experience Luxury like never before
+        </h2>
+        <h3 class="text-2xl mb-8 text-gray-200">
+          Explore 50+ Prime location Properties any given time
+        </h3>
+        <button
+          class="text-white uppercase border-2 px-8 py-4 font-bold tracking-wider shadow-lg"
+        >
+          Explore locations
+        </button>
+      </div>
+    </div>
+    <!--hero section Ends-->
   </body>
 </html>
