--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -240,5 +240,59 @@
       </div>
     </div>
     <!--hero section Ends-->
+    <!--location section-->
+    <!--location Heading-->
+    <div class="flex justify-center mt-10">
+      <h2 class="capitalize text-3xl text-gray-500">location</h2>
+    </div>
+    <!--location-CARD container-->
+    <div class="grid grid-cols-1 md:grid-cols-3 p-8 gap-5">
+      <!--location-card1-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/pokhara.jpeg" class="w-full h-1/2" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">Pokhara</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+      </div>
+      <!--location-card1 Ends-->
+      <!--location-card2-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/kathmandu.jpeg" class="w-full h-1/2" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">Kathmandu</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+      </div>
+      <!--location-card2 Ends-->
+      <!--location-card3-->
+      <div class="rounded-lg shadow-lg overflow-hidden">
+        <img src="images/damak.jpeg" class="w-full h-1/2" />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2 capitalize">Jhandu</div>
+          <p class="text-gray-600">
+            property description Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt, magnam sapiente tempora corrupti
+            suscipit impedit ex! Consequatur eveniet culpa aliquam architecto
+            excepturi ea aspernatur iste! Iste dolores accusantium nemo
+            consectetur!
+          </p>
+        </div>
+      </div>
+      <!--location-card3 Ends-->
+    </div>
+    <!--location section Ends-->
   </body>
 </html>
