--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -216,16 +216,13 @@
     <!--Recent Property Ends-->
     <!--hero section-->
     <div
-      class="max-h-screen py-20"
+      class="h-screen py-20"
       style="
-        background-image: linear-gradient(
-            rgba(0, 0, 0, 0.5),
-            rgba(0, 0, 0, 0.5)
-          ),
+        background-image: linear-gradient(315deg, #d1fae5 0%, #10b981 74%),
           url('images/background.jpeg');
       "
     >
-      <div class="container mx-auto px-6 mt-40">
+      <div class="container mx-auto px-6 mt-36">
         <h2 class="capitalize text-4xl font-bold text-white mb-2">
           Experience Luxury like never before
         </h2>
@@ -233,7 +230,7 @@
           Explore 50+ Prime location Properties any given time
         </h3>
         <button
-          class="text-white uppercase border-2 px-8 py-4 font-bold tracking-wider shadow-lg"
+          class="text-white uppercase border-2 px-8 py-4 font-bold tracking-wider shadow-lg rounded-xl"
         >
           Explore locations
         </button>
@@ -294,5 +291,23 @@
       <!--location-card3 Ends-->
     </div>
     <!--location section Ends-->
+    <!--hero-gradient section-->
+    <div
+      class="py-20"
+      style="background: linear-gradient(315deg, #d1fae5 0%, #10b981 74%)"
+    >
+      <div class="container mx-auto px-6">
+        <h2 class="capitalize text-4xl font-bold text-white mb-2">
+          Save upto 50% on broker commisions
+        </h2>
+        <h3 class="text-2xl mb-8 text-gray-200">Lowest brokerage fees</h3>
+        <button
+          class="text-white uppercase border-2 px-8 py-4 font-extrabold tracking-wider shadow-lg rounded-lg"
+        >
+          Enquire
+        </button>
+      </div>
+    </div>
+    <!--hero-gradient section Ends-->
   </body>
 </html>
