--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -218,7 +218,10 @@
     <div
       class="h-screen py-20"
       style="
-        background-image: linear-gradient(315deg, #d1fae5 0%, #10b981 74%),
+        background-image: linear-gradient(
+            rgba(209, 250, 229, 0.5),
+            rgba(16, 185, 129, 0.5)
+          ),
           url('images/background.jpeg');
       "
     >
