--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -219,7 +219,7 @@
       class="h-screen py-20"
       style="
         background-image: linear-gradient(
-            rgba(209, 250, 229, 0.5),
+            rgba(16, 185, 129, 0.5),
             rgba(16, 185, 129, 0.5)
           ),
           url('images/background.jpeg');
@@ -312,5 +312,89 @@
       </div>
     </div>
     <!--hero-gradient section Ends-->
+    <!--Testimonal Header-->
+    <div class="flex justify-center mt-10">
+      <h2 class="capitalize text-3xl text-gray-500">
+        What clients say about us?
+      </h2>
+    </div>
+    <!--testimonial section-->
+    <div class="p-6 grid grid-cols-1 md:grid-cols-3 gap-5">
+      <!--testimonial1-->
+      <div class="shadow-lg bg-white rounded-xl p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Nostrum aut earum dolor
+          neque odio rem praesentium vel, quos, officiis voluptas facilis,
+          dolores deserunt natus exercitationem fugiat debitis delectus hic?
+          Sint.<span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex bg-green-100 rounded-full items-center space-x-2">
+          <a href="#" class="block relative">
+            <img
+              src="images/image-daniel.jpg"
+              alt=""
+              class="rounded-full h-10 w-10 mx-auto"
+            />
+          </a>
+          <div class="flex flex-col justify-between">
+            <span class="text-sm text-green-500 font-semibold">John Doe</span>
+            <span class="text-xs text-gray-600 font-semibold">Director</span>
+          </div>
+        </div>
+      </div>
+      <!--testimonial1 ends-->
+      <!--testimonial2-->
+      <div class="shadow-lg bg-white rounded-xl p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Nostrum aut earum dolor
+          neque odio rem praesentium vel, quos, officiis voluptas facilis,
+          dolores deserunt natus exercitationem fugiat debitis delectus hic?
+          Sint.<span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex bg-green-100 rounded-full items-center space-x-2">
+          <a href="#" class="block relative">
+            <img
+              src="images/image-kira.jpg"
+              alt=""
+              class="rounded-full h-10 w-10 mx-auto"
+            />
+          </a>
+          <div class="flex flex-col justify-between">
+            <span class="text-sm text-green-500 font-semibold">Jane Doe</span>
+            <span class="text-xs text-gray-600 font-semibold">Producer</span>
+          </div>
+        </div>
+      </div>
+      <!--testimonial2 ends-->
+      <!--testimonial3-->
+      <div class="shadow-lg bg-white rounded-xl p-4">
+        <p class="text-gray-600">
+          <span class="text-green-500 text-lg font-bold">"</span>Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Nostrum aut earum dolor
+          neque odio rem praesentium vel, quos, officiis voluptas facilis,
+          dolores deserunt natus exercitationem fugiat debitis delectus hic?
+          Sint.<span class="text-green-500 text-lg font-bold">"</span>
+        </p>
+        <div class="flex bg-green-100 rounded-full items-center space-x-2">
+          <a href="#" class="block relative">
+            <img
+              src="images/image-jonathan.jpg"
+              alt=""
+              class="rounded-full h-10 w-10 mx-auto"
+            />
+          </a>
+          <div class="flex flex-col justify-between">
+            <span class="text-sm text-green-500 font-semibold">Shaq Black</span>
+            <span class="text-xs text-gray-600 font-semibold"
+              >Diversity Officer</span
+            >
+          </div>
+        </div>
+      </div>
+      <!--testimonial3 ends-->
+    </div>
+    <!--testimonial section Ends-->
   </body>
 </html>
