--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -396,5 +396,92 @@
       <!--testimonial3 ends-->
     </div>
     <!--testimonial section Ends-->
+    <!--Contact Us Heading-->
+    <div class="flex justify-center mt-10">
+      <h2 class="capitalize text-3xl text-gray-500">contact us</h2>
+    </div>
+    <!--Contact us form-->
+    <div
+      class="mt-5 flex p-10 justify-center items-center"
+      style="background: linear-gradient(315deg, #d1fae5 0%, #acddc4 74%)"
+    >
+      <form action="#" class="w-full max-w-lg">
+        <div
+          class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-2 mb-3"
+        >
+          <div class="w-full md:w-1/2 mb-3">
+            <label
+              for="first_name"
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >First Name</label
+            >
+            <input
+              type="text"
+              class="block px-3 py-3 rounded-lg text-gray-700 w-full border border-green-500"
+              name="first_name"
+              placeholder="Jane"
+            />
+            <p class="text-sm text-green-500 italic">
+              Please fill out this field.
+            </p>
+          </div>
+          <div class="w-full md:w-1/2 mb-3">
+            <label
+              for="last_name"
+              class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+              >Last Name</label
+            >
+            <input
+              type="text"
+              class="block px-3 py-3 rounded-lg text-gray-700 w-full border border-green-500"
+              name="last_name"
+              placeholder="Doe"
+            />
+            <p class="text-sm text-green-500 italic">
+              Please fill out this field.
+            </p>
+          </div>
+        </div>
+        <div class="w-full mb-3">
+          <label
+            for="your_email"
+            class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+            >Email</label
+          >
+          <input
+            type="email"
+            class="block px-3 py-3 rounded-lg text-gray-700 w-full border border-green-500"
+            name="your_email"
+            placeholder="jane.doe@gmail.com"
+          />
+          <p class="text-sm text-fuchsia-900 italic">
+            Some tips - as long as needed
+          </p>
+        </div>
+        <div class="w-full mb-3">
+          <label
+            for="your_msg"
+            class="block uppercase text-xs text-gray-700 font-bold mb-2 tracking-wider"
+            >message</label
+          >
+          <textarea
+            class="block px-3 py-3 rounded-lg text-gray-700 w-full border border-green-500 no-resize appearance-none h-48"
+            name="your_msg"
+            placeholder="enter your message here"
+          ></textarea>
+          <p class="text-sm text-gray-700 italic">
+            Re-size can be disabled/set by resize-none /resize-y/resize-x/resize
+          </p>
+        </div>
+        <div class="md:flex md:items-center">
+          <div class="md:w-1/3">
+            <button class="shadow bg-green-600 rounded px-6 py-2 text-white">
+              Submit
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <!--Contact us form End-->
   </body>
 </html>
