--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -483,5 +483,21 @@
       </form>
     </div>
     <!--Contact us form End-->
+    <!--Footer section-->
+    <footer class="pt-10 px-4">
+      <div class="container flex flex-col justify-between mx-auto space-7-8">
+        <div>
+          <a href="#" class="flex justify-center">
+            <div class="flex w-12 h-12">
+              <img src="images/home_icon.png" alt="" class="h-8 w-8 mr-2" />
+            </div>
+            <span class="font-semibold text-gray-500 text-2xl"
+              >Valley Property</span
+            >
+          </a>
+        </div>
+      </div>
+    </footer>
+    <!--Footer section End-->
   </body>
 </html>
