create footer menu

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -484,7 +484,7 @@
     </div>
     <!--Contact us form End-->
     <!--Footer section-->
-    <footer class="pt-10 px-4">
+    <footer class="pt-10 px-4 pb-4">
       <div class="container flex flex-col justify-between mx-auto space-7-8">
         <div>
           <a href="#" class="flex justify-center">
@@ -496,6 +496,45 @@
             >
           </a>
         </div>
+        <!--Footer Menus-->
+        <div
+          class="grid grid-cols-2 sm:grid-cols-4 gap-x-4 gap-y-6 text-sm p-6"
+        >
+          <div class="space-y-3">
+            <h3 class="uppercase text-green-500 tracking-wide">Product</h3>
+            <ul class="space-y-1">
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Intregrations</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Faq</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="uppercase text-green-500 tracking-wide">Company</h3>
+            <ul class="space-y-1">
+              <li><a href="#">Privacy</a></li>
+              <li><a href="#">Terms of Service</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="uppercase text-green-500 tracking-wide">Developers</h3>
+            <ul class="space-y-1">
+              <li><a href="#">Public API</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Guides</a></li>
+            </ul>
+          </div>
+          <div class="space-y-3">
+            <h3 class="uppercase text-green-500 tracking-wide">Social Media</h3>
+            <ul class="space-y-1">
+              <li><a href="#">Public API</a></li>
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Guides</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!--Footer Menus Ends-->
       </div>
     </footer>
     <!--Footer section End-->
