create footer menu social media icon

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -526,10 +526,31 @@
           </div>
           <div class="space-y-3">
             <h3 class="uppercase text-green-500 tracking-wide">Social Media</h3>
-            <ul class="space-y-1">
-              <li><a href="#">Public API</a></li>
-              <li><a href="#">Documentation</a></li>
-              <li><a href="#">Guides</a></li>
+            <ul class="space-y-1 flex space-x-6 items-center">
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/icon-facebook.svg"
+                    alt="facebook"
+                    class="h-6 ficon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/icon-twitter.svg"
+                    alt="twitter"
+                    class="h-6 ficon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="images/icon-instagram.svg"
+                    alt="instagram"
+                    class="h-6 ficon"
+                /></a>
+              </li>
             </ul>
           </div>
         </div>
