fix footer sm css issue and create copyright below footer section

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -526,7 +526,7 @@
           </div>
           <div class="space-y-3">
             <h3 class="uppercase text-green-500 tracking-wide">Social Media</h3>
-            <ul class="space-y-1 flex space-x-6 items-center">
+            <ul class="space-y-1 flex space-x-6 content-center items-center">
               <li>
                 <a href="#"
                   ><img
@@ -554,10 +554,12 @@
             </ul>
           </div>
         </div>
-
         <!--Footer Menus Ends-->
       </div>
     </footer>
     <!--Footer section End-->
+    <div class="text-center text-green-500 text-sm p-6">
+      &copy;1969 Creative company. All rights reserved.
+    </div>
   </body>
 </html>
