footer on row on large device

--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -53,7 +53,7 @@
       </div>
     </nav>
     <!--Banner Section-->
-    <main class="mt-4 md:mt-10">
+    <main class="mt-4 md:mt-16">
       <div class="text-center md:text-left m-6 md:m-8">
         <h1 class="tracking-tight font-extrabold text-5xl md:text-4xl p-2">
           <span class="block">Premium Properties</span>
@@ -484,9 +484,11 @@
     </div>
     <!--Contact us form End-->
     <!--Footer section-->
-    <footer class="pt-10 px-4 pb-4">
-      <div class="container flex flex-col justify-between mx-auto space-7-8">
-        <div>
+    <footer class="pt-10 px-4 pb-4 divide-y-4">
+      <div
+        class="container flex flex-col justify-between mx-auto space-y-8 lg:flex-row lg:space-y-0"
+      >
+        <div class="w-full lg:w-1/4 lg:p-6">
           <a href="#" class="flex justify-center">
             <div class="flex w-12 h-12">
               <img src="images/home_icon.png" alt="" class="h-8 w-8 mr-2" />
@@ -498,7 +500,7 @@
         </div>
         <!--Footer Menus-->
         <div
-          class="grid grid-cols-2 sm:grid-cols-4 gap-x-4 gap-y-6 text-sm p-6"
+          class="grid grid-cols-2 sm:grid-cols-4 gap-x-4 gap-y-6 text-sm p-6 w-full lg:w-3/4"
         >
           <div class="space-y-3">
             <h3 class="uppercase text-green-500 tracking-wide">Product</h3>
@@ -557,6 +559,7 @@
         <!--Footer Menus Ends-->
       </div>
     </footer>
+
     <!--Footer section End-->
     <div class="text-center text-green-500 text-sm p-6">
       &copy;1969 Creative company. All rights reserved.
