--- a/RealEstate/index.html
+++ b/RealEstate/index.html
@@ -53,24 +53,41 @@
       </div>
     </nav>
     <!--Banner Section-->
-    <main class="mt-4 md:mt-16">
+    <main class="mt-4 md:mt-16 mx-auto">
       <div class="text-center md:text-left m-6 md:m-8">
-        <h1 class="tracking-tight font-extrabold text-5xl md:text-4xl p-2">
-          <span class="block">Premium Properties</span>
-          <span class="block text-green-500">Non-Premium Prices</span>
-        </h1>
-        <p class="text-gray-500 text-lg md:text-xl p-2">
-          At prime location in valley, only prime properties too. Voluptates
-          totam consequuntur nisi optio excepturi commodi aperiam quoiure ipsam
-          quibusdam, ab unde earum atque maiores nesciunt nihil,magni magnam!
-          Amet? At prime location in valley, only prime properties too.<br />
-          Voluptates totam consequuntur nisi optio excepturi commodi aperiam
-          quoiure ipsam quibusdam, ab unde earum atque maiores nesciunt
-          nihil,magni magnam! Amet?
-        </p>
+        <div class="flex">
+          <div class="w-full lg:w-1/2">
+            <h1 class="tracking-tight font-extrabold text-5xl md:text-4xl p-2">
+              <span class="block">Premium Properties</span>
+              <span class="block text-green-500">Non-Premium Prices</span>
+            </h1>
+            <p class="text-gray-500 text-lg md:text-xl p-2">
+              At prime location in valley, only prime properties too. Voluptates
+              totam consequuntur nisi optio excepturi commodi aperiam quoiure
+              ipsam quibusdam, ab unde earum atque maiores nesciunt nihil,magni
+              magnam! Amet? At prime location in valley, only prime properties
+              too.<br />
+              Voluptates totam consequuntur nisi optio excepturi commodi aperiam
+              quoiure ipsam quibusdam, ab unde earum atque maiores nesciunt
+              nihil,magni magnam! Amet?
+            </p>
+          </div>
+          <div
+            class="hidden lg:flex w-1/2 border rounded-xl"
+            style="
+              background-image: linear-gradient(
+                  rgba(16, 185, 129, 0.5),
+                  rgba(16, 185, 129, 0.5)
+                ),
+                url('images/property1.jpeg');
+            "
+          >
+            <!-- <img src="images/property.jpeg" alt="" class="w-full h-4/5" /> -->
+          </div>
+        </div>
         <!--buttons-->
         <div
-          class="flex flex-col sm:flex-row sm:justify-center space-y-4 sm:space-y-0 sm:space-x-4 p-2"
+          class="flex flex-col sm:flex-row sm:justify-center space-y-4 sm:space-y-0 sm:space-x-4 p-3"
         >
           <div>
             <a
@@ -484,9 +501,9 @@
     </div>
     <!--Contact us form End-->
     <!--Footer section-->
-    <footer class="pt-10 px-4 pb-4 divide-y-4">
+    <footer class="pt-10 px-4 pb-4">
       <div
-        class="container flex flex-col justify-between mx-auto space-y-8 lg:flex-row lg:space-y-0"
+        class="container flex flex-col justify-between mx-auto space-y-8 lg:flex-row lg:space-y-0 divide-y-2 lg:divide-y-0 lg:divide-x-2"
       >
         <div class="w-full lg:w-1/4 lg:p-6">
           <a href="#" class="flex justify-center">
@@ -561,8 +578,14 @@
     </footer>
 
     <!--Footer section End-->
-    <div class="text-center text-green-500 text-sm p-6">
-      &copy;1969 Creative company. All rights reserved.
+    <div class="relative flex p-6 items-center">
+      <div class="flex-grow border-t border-gray-400"></div>
+      <span class="flex-shrink mx-4 text-gray-400"
+        ><div class="text-center text-green-500 text-sm p-6">
+          &copy;1969 Creative company. All rights reserved.
+        </div></span
+      >
+      <div class="flex-grow border-t border-gray-400"></div>
     </div>
   </body>
 </html>
